@@ -2,7 +2,7 @@ import org.springframework.boot.gradle.tasks.run.BootRun
 
 buildscript {
     ext {
-        springBootVersion = '2.3.9.RELEASE'
+        springBootVersion = '2.3.11.RELEASE'
     }
     repositories {
         mavenCentral()
@@ -10,7 +10,7 @@ buildscript {
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-        classpath("net.serenity-bdd:serenity-gradle-plugin:2.4.24")
+        classpath("net.serenity-bdd:serenity-gradle-plugin:2.5.7")
     }
 }
 
@@ -18,13 +18,13 @@ plugins {
     id 'application'
     id 'checkstyle'
     id 'com.github.ben-manes.versions' version '0.39.0'
-    id 'com.jfrog.bintray' version '1.8.4'
+    id 'com.jfrog.bintray' version '1.8.5'
     id 'info.solidsoft.pitest' version '1.5.2'
     id 'io.spring.dependency-management' version '1.0.10.RELEASE'
     id 'jacoco'
-    id 'org.owasp.dependencycheck' version '6.1.6'
-    id 'org.sonarqube' version '3.0'
-    id 'org.springframework.boot' version '2.3.9.RELEASE'
+    id 'org.owasp.dependencycheck' version '6.2.2'
+    id 'org.sonarqube' version '3.3'
+    id 'org.springframework.boot' version '2.3.11.RELEASE'
     id 'au.com.dius.pact' version '4.2.3'
 }
 
@@ -66,7 +66,7 @@ repositories {
     mavenCentral()
     jcenter()
     maven { url 'https://repo.spring.io/libs-milestone' }
-    maven { url "https://dl.bintray.com/hmcts/hmcts-maven" }
+    maven { url "https://jitpack.io" }
 }
 
 distributions {
@@ -108,6 +108,10 @@ dependencyCheck {
     // range of 0-10 fails the build, anything greater and it doesn't fail the build
     failBuildOnCVSS = System.getProperty('dependencyCheck.failBuild') == 'true' ? 0 : 11
     suppressionFile = 'dependency-check-suppressions.xml'
+    analyzers {
+        // Disable scanning of .NET related binaries
+        assemblyEnabled = false
+    }
 }
 
 def versions = [
@@ -122,16 +126,16 @@ def versions = [
     idamClient: '1.1.0',
     jackson: '2.11.0',
     jsonAssert: '1.2.3',
-    junit: '4.13.1',
+    junit: '4.13.2',
     junit_jupiter: '5.7.1',
-    lombok: '1.18.12',
+    lombok: '1.18.14',
     pact_version: '4.1.7',
     pitest: '1.5.2',
     puppyCrawl: '8.29',
     reformPropertiesVolume: '0.0.4',
     reformsJavaLogging: '5.1.7',
-    restAssured: '3.3.0',
-    serenity: '2.2.12',
+    restAssured: '4.2.1',
+    serenity: '2.5.8',
     serenityCucumber: '1.9.51',
     serviceTokenGenerator: '3.0.0',
     sonarPitest: '0.5',
@@ -139,7 +143,7 @@ def versions = [
     springfoxSwagger: '2.9.2',
     springSecurityCrypto: '5.4.5',
     springSecurityRsa: '1.0.9.RELEASE',
-    tomcat: '9.0.43',
+    tomcat: '9.0.50',
     unirest: '1.4.9',
     wiremockVersion: '2.27.2'
 ]
@@ -153,10 +157,12 @@ dependencies {
     compileOnly("org.projectlombok:lombok:${versions.lombok}")
 
     testCompileOnly("org.projectlombok:lombok:${versions.lombok}")
+    testCompile('com.github.hmcts:fortify-client:1.2.0:all')
     annotationProcessor("org.projectlombok:lombok:${versions.lombok}")
     testAnnotationProcessor("org.projectlombok:lombok:${versions.lombok}")
     integrationTestImplementation group: 'org.projectlombok', name: 'lombok', version: versions.lombok
 
+    implementation group: 'com.sun.xml.bind', name: 'jaxb-osgi', version: '2.3.3'
     implementation group: 'org.springframework', name: 'spring-context-support'
     implementation (group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign')
         {
@@ -243,6 +249,8 @@ dependencies {
     integrationTestImplementation group: 'net.serenity-bdd', name: 'serenity-junit', version: versions.serenity
     integrationTestImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: versions.serenity
     integrationTestImplementation group: 'net.serenity-bdd', name: 'serenity-spring', version: versions.serenity
+    integrationTestImplementation group: 'io.rest-assured', name: 'rest-assured', version: versions.restAssured
+    integrationTestImplementation group: 'io.rest-assured', name: 'rest-assured-all', version: versions.restAssured
     integrationTestImplementation group: 'org.apache.commons', name: 'commons-lang3', version: versions.commonsLang3
     integrationTestImplementation group: 'org.skyscreamer', name:'jsonassert', version: versions.jsonAssert
     integrationTestImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
@@ -269,7 +277,7 @@ dependencies {
             exclude group: 'io.reactivex', module: 'rxnetty-contexts'
             exclude group: 'io.reactivex', module: 'rxnetty-servo'
         }
-    integrationTestImplementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.10.2'
+    integrationTestImplementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.12.0'
 
     contractTestImplementation group: 'org.springframework', name: 'spring-context-support'
     contractTestImplementation (group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign')
@@ -280,7 +288,6 @@ dependencies {
                 exclude group: 'io.reactivex', module: 'rxnetty-servo'
             }
     contractTestImplementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.10.2'
-
 }
 
 sourceSets {
@@ -308,8 +315,7 @@ dependencyManagement {
     dependencies {
         dependency group: 'commons-beanutils', name: 'commons-beanutils', version: versions.commonsBeanUtils
 
-        //CVE-2017-18640
-        dependency group: 'org.yaml',name: 'snakeyaml', version: '1.26'
+        dependency group: 'org.yaml',name: 'snakeyaml', version: '1.29'
 
         // solves CVE-2014-3488, CVE-2015-2156, CVE-2019-16869
         dependencySet(group: 'io.netty', version: '4.1.65.Final') {
@@ -322,9 +328,6 @@ dependencyManagement {
             entry 'netty-transport'
         }
 
-        //CVE-2017-18640
-        dependency group: 'org.yaml',name: 'snakeyaml', version: '1.26'
-
         dependencySet(
             group: 'com.fasterxml.jackson.core',
             version: versions.jackson
@@ -332,6 +335,7 @@ dependencyManagement {
             entry 'jackson-core'
             entry 'jackson-databind'
         }
+        dependency group: 'org.glassfish', name: 'jakarta.el', version: '3.0.4'
     }
 }
 
@@ -353,7 +357,6 @@ dependencies {
     contractTestRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: versions.junit_jupiter
     contractTestImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: versions.junit_jupiter
     contractTestRuntime "org.junit.platform:junit-platform-commons:1.7.2"
-
 }
 
 task smoke(type: Test, description: 'Runs the smoke tests.', group: 'Verification') {
@@ -493,3 +496,11 @@ pact {
         version = project.pacticipantVersion
     }
 }
+
+
+task fortifyScan(type: JavaExec)  {
+    main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+    classpath += sourceSets.test.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
